# agentic-hydrology-platform

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: 00_architecture.md  00_roadmap.md  01_lstm_intuition.md  02_from_llm_to_lstm.md  03_hydrology_metrics.md
experiments/real_smoketest/: README.md  config.yml  prepare_data.sh  summarize.py
experiments/real_smoketest/results/: test_metrics.csv
results/: test_scores.json
scripts/: 01_generate_data.py  02_explore_data.py  03_train_lstm.py
src/lstm_hydrology/: __init__.py  dataset.py  metrics.py  model.py  synthetic.py  train.py
