[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lstm-hydrology"
version = "0.1.0"
description = "LSTM component (large-scale catchment streamflow & flood) of the Agentic Hydrology Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zhonghao Zhang" }]
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
